<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="com_wyc_label_label_name">标签名称：</string>
    <string name="com_wyc_label_label_width">宽度：</string>
    <string name="com_wyc_label_label_height">高度：</string>
    <string name="com_wyc_label_default_format">默认格式：</string>
    <string name="com_wyc_label_OK">确定</string>
    <string name="com_wyc_label__cancel">取消</string>
    <string name="com_wyc_label_add_label">新增标签</string>
    <string name="com_wyc_label_ean_13_error_hint">EAN13条码格式错误!</string>
    <string name="com_wyc_label_new_barcode_hint">生成条码错误:%1$s</string>
    <string name="com_wyc_label_font">字&#160;&#160;&#160;体</string>
    <string name="com_wyc_label_not_ean_13">内容长度错误,EAN_13格式长度只能为13位!</string>
    <string name="com_wyc_label_printer_connecting">正在连接打印机…</string>
    <string name="com_wyc_label_printer_printing">正在打印…</string>
    <string name="com_wyc_label_conn_fail">连接失败</string>
    <string name="com_wyc_label_conn_success">连接成功</string>
    <string name="com_wyc_label_print_success">打印成功</string>
    <string name="com_wyc_label_print_failure">打印失败</string>
    <string name="com_wyc_label_printer_disconnect">打印机断开</string>
    <string name="com_wyc_label_delete">删除</string>
    <string name="com_wyc_label_shrink">缩小</string>
    <string name="com_wyc_label_zoom">放大</string>
    <string name="com_wyc_label_rotate">旋转</string>
    <string name="com_wyc_label_undo">撤销</string>
    <string name="com_wyc_label_text">文字</string>
    <string name="com_wyc_label_barcode">自定义条码</string>
    <string name="com_wyc_label_qrcode">二维码</string>
    <string name="com_wyc_label_line">线条</string>
    <string name="com_wyc_label_rect">矩形</string>
    <string name="com_wyc_label_circle">圆形</string>
    <string name="com_wyc_label_label_date">日期</string>
    <string name="com_wyc_label_data">数据列</string>
    <string name="com_wyc_label_bg">背景</string>
    <string name="com_wyc_label_imExport">导入导出</string>
    <string name="com_wyc_label_save">保存</string>
    <string name="com_wyc_label_preview">预览</string>
    <string name="com_wyc_label_print">打印</string>
    <string name="com_wyc_label_back">返回</string>
    <string name="com_wyc_label_label_setting">标签设计</string>
    <string name="com_wyc_label_export">导出</string>
    <string name="com_wyc_label_import_">导入</string>
    <string name="com_wyc_label_add">新增</string>
    <string name="com_wyc_label_add_b">新增背景</string>
    <string name="com_wyc_label_del_b">删除背景</string>
    <string name="com_wyc_label_style">样&#160;&#160;&#160;式</string>
    <string name="com_wyc_label_newline">换行</string>
    <string name="com_wyc_label_bold">粗体</string>
    <string name="com_wyc_label_italic">斜体</string>
    <string name="com_wyc_label_underLine">下划线</string>
    <string name="com_wyc_label_delLine">删除线</string>
    <string name="com_wyc_label_t_align">对&#160;&#160;&#160;齐</string>
    <string name="com_wyc_label_l_align">左对齐</string>
    <string name="com_wyc_label_m_align">中间对齐</string>
    <string name="com_wyc_label_r_align">右对齐</string>
    <string name="com_wyc_label_letterSpacing">字间距</string>
    <string name="com_wyc_label_date_format">格&#160;&#160;&#160;式</string>
    <string name="com_wyc_label_auto_update">自动更新</string>
    <string name="com_wyc_label_printer_not_init">打印机未初始化…</string>
    <string name="com_wyc_label_status_fail">打印机状态获取失败，请检查打印机是否缺纸或开盖</string>
    <string name="com_wyc_label_status_normal">状态正常</string>
    <string name="com_wyc_label_status_feed">状态走纸、打印</string>
    <string name="com_wyc_label_status_out_of_paper">状态缺纸</string>
    <string name="com_wyc_label_status_open">状态开盖</string>
    <string name="com_wyc_label_status_overheated">状态过热</string>
    <string name="com_wyc_label_send_success">发送成功</string>
    <string name="com_wyc_label_not_connect">打印机未连接…</string>
    <string name="com_wyc_label_bluetooth_way">蓝牙打印</string>
    <string name="com_wyc_label_gp_m322">佳博M-322</string>
    <string name="com_wyc_label_tp">热敏打印机</string>
    <string name="com_wyc_label_wifi_hprt_ht300">汉印HT300</string>
    <string name="com_wyc_label_wifi_way">网口打印</string>
    <string name="com_wyc_label_driver_way">驱动打印</string>
    <string name="com_wyc_label_not_support_way">不支持此打印方式</string>
    <string name="com_wyc_label_success">成功</string>
    <string name="com_wyc_label_code_format">编码格式</string>
    <string name="com_wyc_label_fill">填充</string>
    <string name="com_wyc_label_border">边框</string>
    <string name="com_wyc_label_dot">虚边框</string>
    <string name="com_wyc_label_dot_width">虚线宽</string>
    <string name="com_wyc_label_border_width">线宽</string>
    <string name="com_wyc_label_print_way">打印接口</string>
    <string name="com_wyc_label_print_type">打印机型号</string>
    <string name="com_wyc_label_print_type_not_empty">打印机型号不能为空!</string>
    <string name="com_wyc_label_printer">打印机</string>
    <string name="com_wyc_label_ip">IP:</string>
    <string name="com_wyc_label_port">端口:</string>
    <string name="com_wyc_label_no_printer_hint">打印机未设置</string>
    <string name="com_wyc_label_rotate_degree_setting">标签旋转设置</string>
    <string name="com_wyc_label_cur_label_model">当前默认模板</string>
    <string name="com_wyc_label_print_num">打印份数</string>
    <string name="com_wyc_label_paper_type">纸张类型</string>
    <string name="com_wyc_label_label_gap">标签间隔</string>
    <string name="com_wyc_label_black_h">黑标高度</string>
    <string name="com_wyc_label_print_density">打印浓度</string>
    <string name="com_wyc_label_hor_offset">水平偏移</string>
    <string name="com_wyc_label_ver_offset">垂直偏移</string>
    <string name="com_wyc_label_dpi">分辨率</string>
    <string name="com_wyc_label_label_design">标签格式设计</string>
    <string name="com_wyc_label_round">圆&#160;&#160;&#160;&#160;角</string>
    <string name="com_wyc_label_rotate_label_print_setting">标签打印设置</string>
    <string name="com_wyc_label_searching_bluetooth">正在搜索蓝牙打印机…</string>
    <string name="com_wyc_label_local_label">本地模板</string>
    <string name="com_wyc_label_inner_label">内置模板</string>
    <string name="com_wyc_label_modify">修改</string>
    <string name="com_wyc_label_label_empty_hints">标签内容为空,请检查标签是否已设置或当前默认模板已选择…</string>
    <string name="c_label_failure">解析格式错误:%1$s</string>
    <string name="not_enable_bluetooth">未开启蓝牙功能…</string>
    <string name="not_support_bluetooth">此设备不支持蓝牙功能…</string>
    <string name="com_wyc_label_export_error">导出标签错误,请检查文件格式或路径是否正确…</string>
    <string name="com_wyc_label_import_error">导入标签错误,请检查文件格式或路径是否正确…</string>
    <string name="com_wyc_label_ip_not_empty_hint">打印机IP不能为空!</string>
    <string name="com_wyc_label_not_support_printer">不支持%1$s打印机!</string>
</resources>