<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/com_wyc_label_round_shape"
    android:padding="@dimen/com_wyc_label_margin_8">

    <TextView
        android:id="@+id/style_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_wyc_label_style"
        android:textColor="@color/com_wyc_label_text_color"
        android:textSize="@dimen/com_wyc_label_font_size_16"
        app:layout_constraintBottom_toBottomOf="@id/bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bold" />

    <CheckBox
        android:id="@+id/newline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_wyc_label_newline"
        android:textColor="@color/com_wyc_label_text_color"
        android:textSize="@dimen/com_wyc_label_font_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content"
        app:layout_constraintTop_toTopOf="@id/content" />

    <CheckBox
        android:id="@+id/bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/com_wyc_label_margin_12"
        android:text="@string/com_wyc_label_bold"
        android:textColor="@color/com_wyc_label_text_color"
        android:textSize="@dimen/com_wyc_label_font_size_14"
        app:layout_constraintEnd_toStartOf="@+id/italic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/style_label"
        app:layout_constraintTop_toBottomOf="@+id/font_label" />

    <CheckBox
        android:id="@+id/italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_wyc_label_italic"
        android:textColor="@color/com_wyc_label_text_color"
        android:textSize="@dimen/com_wyc_label_font_size_14"
        app:layout_constraintEnd_toStartOf="@+id/underLine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bold"
        app:layout_constraintTop_toTopOf="@id/bold" />

    <CheckBox
        android:id="@+id/underLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_wyc_label_underLine"
        android:textColor="@color/com_wyc_label_text_color"
        android:textSize="@dimen/com_wyc_label_font_size_14"
        app:layout_constraintEnd_toStartOf="@id/delLine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/italic"
        app:layout_constraintTop_toTopOf="@id/bold" />

    <CheckBox
        android:id="@+id/delLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_wyc_label_delLine"
        android:textColor="@color/com_wyc_label_text_color"
        android:textSize="@dimen/com_wyc_label_font_size_14"
        app:layout_constraintStart_toEndOf="@id/underLine"
        app:layout_constraintTop_toTopOf="@id/bold" />

    <TextView
        android:id="@+id/align_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_wyc_label_t_align"
        android:textColor="@color/com_wyc_label_text_color"
        android:textSize="@dimen/com_wyc_label_font_size_16"
        app:layout_constraintBottom_toBottomOf="@id/align"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/align" />

    <RadioGroup
        android:id="@+id/align"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/com_wyc_label_margin_2"
        android:layout_marginTop="@dimen/com_wyc_label_margin_12"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/align_label"
        app:layout_constraintTop_toBottomOf="@id/style_label">

        <RadioButton
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/com_wyc_label_margin_12"
            android:text="@string/com_wyc_label_l_align"
            android:textColor="@color/com_wyc_label_text_color"
            android:textSize="@dimen/com_wyc_label_font_size_14" />

        <RadioButton
            android:id="@+id/mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/com_wyc_label_margin_12"
            android:text="@string/com_wyc_label_m_align"
            android:textColor="@color/com_wyc_label_text_color"
            android:textSize="@dimen/com_wyc_label_font_size_14" />

        <RadioButton
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/com_wyc_label_r_align"
            android:textColor="@color/com_wyc_label_text_color"
            android:textSize="@dimen/com_wyc_label_font_size_14" />
    </RadioGroup>

    <TextView
        android:id="@+id/font_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_wyc_label_font"
        android:textColor="@color/com_wyc_label_text_color"
        android:textSize="@dimen/com_wyc_label_font_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.wyc.label.MySeekBar
        android:id="@+id/font"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/font_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/font_label"
        app:layout_constraintTop_toTopOf="@id/font_label" />

    <TextView
        android:id="@+id/letterSpacing_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/com_wyc_label_margin_12"
        android:text="@string/com_wyc_label_letterSpacing"
        android:textColor="@color/com_wyc_label_text_color"
        android:textSize="@dimen/com_wyc_label_font_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/align" />

    <com.wyc.label.MySeekBar
        android:id="@+id/letterSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/letterSpacing_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/letterSpacing_label"
        app:layout_constraintTop_toTopOf="@id/letterSpacing_label" />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="@dimen/com_wyc_label_height_40"
        android:layout_marginTop="@dimen/com_wyc_label_margin_12"
        android:background="@drawable/com_wyc_label_edit_text_with_gray_border_style"
        android:editable="false"
        android:ems="10"
        android:paddingStart="@dimen/com_wyc_label_margin_5"
        android:paddingEnd="@dimen/com_wyc_label_margin_5"
        android:textColor="@color/com_wyc_label_text_color"
        android:textSize="@dimen/com_wyc_label_font_size_16"
        app:layout_constraintEnd_toStartOf="@id/newline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/letterSpacing_label" />

    <TextView
        android:id="@+id/format_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_wyc_label_date_format"
        android:textColor="@color/com_wyc_label_text_color"
        android:textSize="@dimen/com_wyc_label_font_size_16"
        app:layout_constraintBottom_toBottomOf="@id/format"
        app:layout_constraintStart_toStartOf="@id/content"
        app:layout_constraintTop_toTopOf="@id/format" />

    <Spinner
        android:id="@+id/format"
        android:layout_width="0dp"
        android:layout_height="@dimen/com_wyc_label_height_40"
        android:layout_marginStart="@dimen/com_wyc_label_margin_5"
        android:layout_marginTop="@dimen/com_wyc_label_margin_12"
        android:foreground="@drawable/com_wyc_label_spinner_style"
        app:layout_constraintEnd_toStartOf="@id/auto_update"
        app:layout_constraintStart_toEndOf="@id/format_label"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <CheckBox
        android:id="@+id/auto_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/com_wyc_label_auto_update"
        android:textColor="@color/com_wyc_label_text_color"
        android:textSize="@dimen/com_wyc_label_font_size_14"
        app:layout_constraintBottom_toBottomOf="@id/format"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/format" />
</androidx.constraintlayout.widget.ConstraintLayout>